--- a/templates/myapp/editor.html
+++ b/templates/myapp/editor.html
@@ -41,12 +41,12 @@
                 <span class="step-title">{% trans 'Delivery' %}</span>
             </a>
         </li>
-<!--         <li class="stepbar-item next">
+        <li class="stepbar-item next">
             <a class="stepbar-link" href="#" title="Step 6 : Aspernatur">
-                <span class="step-number">{% trans '6' %}</span>
+                <span class="step-number">{% trans '5' %}</span>
                 <span class="step-title">{% trans 'Overview' %}</span>
             </a>
-        </li> -->
+        </li>
     </ol>
 </nav>
 
@@ -73,7 +73,7 @@
         <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 55%;">{% trans 'Cancel' %}</a>
         <a href="" id="editor_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
         <button type="submit" id="editor_save_draft" onclick="SetDest1()" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</button>
-        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Send Campaign' %}</button>  
+        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</button>  
     </div>
     </form>
 </div>
@@ -96,44 +96,36 @@
             document.forms["form1"].action = ajax_url;
         }
 
-//     $("#editor_save_draft").click(function(e){   
-//         e.preventDefault();
+    var chatSocket = new WebSocket(
+        'ws://' + window.location.host +
+        '/ws/autosave_editor/' + slug + '/');
 
-//         var editor = CKEDITOR.instances.id_campaign_body.document.getBody().getHtml();
-//         var csrf_token = $('input[name=csrfmiddlewaretoken]').val()
-//         console.log("editor......",$('form').serialize())
-//         editor = '<p>dd<img alt="" data-cke-saved-src="/media/uploads/ba12345/2018/10/12/image002_JIZ0bNb.png" src="/media/uploads/ba12345/2018/10/12/image002_JIZ0bNb.png" style="width: 25px; height: 25px;">​​​​​​​bvcbcbc</p>'
-//         // data = "csrfmiddlewaretoken="+csrf_token+"&"+"campaign_body="+editor
-//         data = "csrfmiddlewaretoken="+csrf_token+"&"+"campaign_body="+editor
-//         ajax_url = '/campaign/editordraft/' + slug+'/'
-//             $.ajax({
-//                 url : ajax_url,
-//                 type : 'POST',
-//                 data : data,
-//                 success: function(data){
-//                     // window.location.replace('/')
-//                 }
-//             });
-// });
+    function ajax(){
+        var editor = CKEDITOR.instances.id_campaign_body.document.getBody().getHtml();
+        var csrf_token = $('input[name=csrfmiddlewaretoken]').val()
+        ajax_url = '/campaign/ajax/autodraft/' + slug+'/'
+        data = "csrfmiddlewaretoken="+csrf_token+"&"+"campaign_body="+editor
+        // chatSocket.onmessage = function(e) {
+        //     var data = JSON.parse(e.data);
+        //     var message = data['message'];
+        //     document.querySelector('#chat-log').value += (message + '\n');
+        // };
 
-function ajax(){
-    var editor = CKEDITOR.instances.id_campaign_body.document.getBody().getHtml();
-    var csrf_token = $('input[name=csrfmiddlewaretoken]').val()
-    ajax_url = '/campaign/ajax/autodraft/' + slug+'/'
-    data = "csrfmiddlewaretoken="+csrf_token+"&"+"campaign_body="+editor
-    console.log(data)
-        $.ajax({
-            url : ajax_url,
-            type : 'POST',
-            data : data,
-            success: function(data){
-            }
-        });
-        return false;
+        chatSocket.onclose = function(e) {
+            console.error('Chat socket closed unexpectedly');
+        };
+
+        chatSocket.send(JSON.stringify({
+            'messagess': editor
+        }));
 }
 
+
+
 window.onload=function(){
+    // ajax()
     setInterval(ajax, 60000);
 }
 </script>
+
 {% endblock  %}
