--- a/templates/myapp/overview.html
+++ b/templates/myapp/overview.html
@@ -28,54 +28,75 @@
                 <span class="step-title">Customize</span>
             </a>
         </li>
-        <li class="stepbar-item done">
+<!--         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 4 : Ipsam">
                 <span class="step-number">4</span>
                 <span class="step-title">Preview</span>
             </a>
-        </li>
-        <li class="stepbar-item current">
+        </li> -->
+        <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 5 : Aspernatur">
-                <span class="step-number">5</span>
+                <span class="step-number">4</span>
                 <span class="step-title">Delivery</span>
             </a>
         </li>
-        <li class="stepbar-item next">
+        <li class="stepbar-item current">
             <a class="stepbar-link" href="#" title="Step 6 : Aspernatur">
-                <span class="step-number">6</span>
+                <span class="step-number">5</span>
                 <span class="step-title">Overview</span>
             </a>
         </li>
     </ol>
 </nav>
-<!-- <div class="container">
+<div class="container" style="margin-top: 2%">
     <div class="row">
-        <div class='col-sm-6'>
-            <div class="form-group">
+        <div class='col-sm-10'>
+            <div class="row">
+                <div class='col-sm-2'>
+                    <h6>{% trans 'Subject line' %}</h6>
+                </div>
+                <div class='col-sm-10'>
+                    {{subject}} &nbsp;&nbsp;&nbsp;&nbsp;       <a href="{% url 'updatecampaign' campaign_name %}" style="text-decoration: underline;font-weight: 600">Edit</a>
+            <!-- <p><h6>{% trans 'Sender' %}</h6> {{request.user.get_full_name}}</p> -->
+            </div>
+        </div>
+            <div class="row">
+                <div class='col-sm-2'>
+                    <h6>{% trans 'Sender' %}</h6>
+                </div>
+                <div class='col-sm-10'>
+            {{request.user.get_full_name}}&nbsp;&nbsp;&nbsp;&nbsp; 
+                  <!-- <a href="" style="text-decoration: underline;font-weight: 600">Edit</a> -->
+            </div>
+        </div>
+<!--             <div class="form-group">
                 <div class='input-group date' id='datetimepicker1'>
                     <input type='text' class="form-control" />
                     <span class="input-group-addon">
                         <span class="icon-calendar_month"></span>
                     </span>
                 </div>
-            </div>
+            </div> -->
+        </div>
+        <div class='col-sm-2'>
+            <button type="button" class="btn btn-secondary">{% trans 'Schedule' %}</button>
         </div>
         </div>
-</div> -->
-<form method="post" action="">
+</div>
+<!-- <form method="post" action="">
     {% csrf_token %}
 <div class="row">
     <input type="date" name="date">
     <input type="time" name="time">
-</div>
+</div> -->
 
-<div class="row" style="margin-top: 9%">
+<div class="row" style="margin-top: 23%">
           <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
         <a href="" id="template_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
         <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
         <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</button>  
 </div>
-</form>
+<!-- </form> -->
 
 </div>
 <script type="text/javascript">
