--- a/templates/myapp/editor.html
+++ b/templates/myapp/editor.html
@@ -14,13 +14,13 @@
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 1 : General Info">
                 <span class="step-number">{% trans '1' %}</span>
-                <span class="step-title">{% trans 'General Info' %}</span>
+                <span class="step-title">{% trans 'Campaign Info' %}</span>
             </a>
         </li>
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 2 : Template" aria-current="step">
                 <span class="step-number">{% trans '2' %}</span>
-                <span class="step-title">{% trans 'Template' %}</span>
+                <span class="step-title">{% trans 'Design' %}</span>
             </a>
         </li>
         <li class="stepbar-item current">
