--- a/templates/myapp/overview.html
+++ b/templates/myapp/overview.html
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1 style="font-size: 40px">{% trans 'Add an entry' %}</h1>
+    <h1 style="font-size: 40px">{% trans 'Last review before delivery' %}</h1>
   </div>
 </div>
 <nav class="o-stepbar">
@@ -13,13 +13,13 @@
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 1 : General Info">
                 <span class="step-number">1</span>
-                <span class="step-title">{% trans 'General Info' %}</span>
+                <span class="step-title">{% trans 'Campaign Info' %}</span>
             </a>
         </li>
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 2 : Aperiam" aria-current="step">
                 <span class="step-number">2</span>
-                <span class="step-title">{% trans 'Template' %}</span>
+                <span class="step-title">{% trans 'Design' %}</span>
             </a>
         </li>
         <li class="stepbar-item done">
@@ -94,7 +94,7 @@
           <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
         <a href="" id="template_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
         <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
-        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</button>  
+        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'SEND' %}</button>  
 </div>
 <!-- </form> -->
 
