--- a/templates/myapp/delivery.html
+++ b/templates/myapp/delivery.html
@@ -5,80 +5,86 @@
 
 <div class="row">
   <div class="col-md-6">
-    <h1 style="font-size: 40px;color:white">{% trans 'Add an entry' %}</h1>
+    <h1 style="font-size: 40px">{% trans 'Last review before delivery' %}</h1>
   </div>
 </div>
 <nav class="o-stepbar">
     <ol>
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 1 : General Info">
-                <span class="step-number">{% trans '1' %}</span>
-                <span class="step-title">{% trans 'General Info' %}</span>
+                <span class="step-number">1</span>
+                <span class="step-title">{% trans 'Campaign Info' %}</span>
             </a>
         </li>
         <li class="stepbar-item done">
-            <a class="stepbar-link" href="#" title="Step 2 : Template" aria-current="step">
-                <span class="step-number">{% trans '2' %}</span>
-                <span class="step-title">{% trans 'Template' %}</span>
+            <a class="stepbar-link" href="#" title="Step 2 : Aperiam" aria-current="step">
+                <span class="step-number">2</span>
+                <span class="step-title">{% trans 'Design' %}</span>
             </a>
         </li>
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 3 : Accusantinum">
-                <span class="step-number">{% trans '3' %}</span>
-                <span class="step-title">{% trans 'Customize' %}</span>
+                <span class="step-number">3</span>
+                <span class="step-title">Customize</span>
             </a>
         </li>
-<!--         <li class="stepbar-item next">
+<!--         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 4 : Ipsam">
-                <span class="step-number">{% trans '4' %}</span>
-                <span class="step-title">{% trans 'Preview' %}</span>
-            </a> -->
-        </li>
-        <li class="stepbar-item current">
-            <a class="stepbar-link" href="#" title="Step 5 : Aspernatur">
-                <span class="step-number">{% trans '4' %}</span>
-                <span class="step-title">{% trans 'Delivery' %}</span>
-            </a>
-        </li>
-<!--         <li class="stepbar-item next">
-            <a class="stepbar-link" href="#" title="Step 6 : Aspernatur">
-                <span class="step-number">{% trans '6' %}</span>
-                <span class="step-title">{% trans 'Overview' %}</span>
+                <span class="step-number">4</span>
+                <span class="step-title">Preview</span>
             </a>
         </li> -->
+        <li class="stepbar-item current">
+            <a class="stepbar-link" href="#" title="Step 5 : Aspernatur">
+                <span class="step-number">4</span>
+                <span class="step-title">Delivery</span>
+            </a>
+        </li>
+        <li class="stepbar-item next">
+            <a class="stepbar-link" href="#" title="Step 6 : Aspernatur">
+                <span class="step-number">5</span>
+                <span class="step-title">Overview</span>
+            </a>
+        </li>
     </ol>
 </nav>
-
+<div class="container" style="margin-top: 2%">
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">{% trans 'Name' %}</th>
+      <th scope="col">{% trans 'Type' %}</th>
+      <th scope="col">{% trans 'Creation Date' %}</th>
+      <th scope="col">{% trans 'Author' %}</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for l in object_list %}
+    <tr>
+      <th scope="row"><a href="javascript:void(0)" onclick="select(this)" id="{{l.name}}">{{l.name}}</a></th>
+      <td>{{l.type_of_list}}</td>
+      <td>{{l.creation_date}}</td>
+      <td>{{l.creator.first_name}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+</div>
+<!-- <form method="post" action="">
+    {% csrf_token %}
 <div class="row">
-
-<div class="card" style="border: 2px solid #000;padding: 3rem;margin-top: 6rem;margin-left: 15rem">
-  <div class="card-body">
-    The email has been sent to "<b style="color: #f16e00"> {{request.user.email}} </b>"
-  </div>
+    <input type="date" name="date">
+    <input type="time" name="time">
+</div> -->
+{% csrf_token %}
+<div id='mailing_list'></div>
+<div class="row" style="margin-top: 13%">
+          <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
+        <a href="" id="delivery_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
+        <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
+        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'SEND' %}</button>  
 </div>
-
-<!--   <div class="col-md-9">
-      
-  </div>
-  <div class="col-md-3">
-          <div class="custom-control custom-checkbox">
-        <input type="checkbox" class="custom-control-input" id="inclusion_flag" name="inclusion_flag">
-        <label class="custom-control-label" for="inclusion_flag">{% trans 'Include Sub-Entities' %}</label>
-      </div> 
-  </div> -->
-</div>
-
-<div class="row">
-  <a href="" id="blank_template">
-</a>
-</div>
-<div class="row" style="margin-top: 9%">
-          <!-- <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a> -->
-        <!-- <a href="" id="template_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a> -->
-        <!-- <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a> -->
-        <a href="{% url 'home' %}" id="template_next" class="btn btn-primary" style="margin-left: 85%;">{% trans 'GO TO HOME' %}</a>  
-        <!-- <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</button>   -->
-</div>
+<!-- </form> -->
 
 </div>
 <script type="text/javascript">
@@ -86,8 +92,25 @@
     parameter = url.split("/")
     slug = parameter[parameter.length - 2]
     editorcampaign = '/campaign/editor/' + slug
-    editor_url = '/campaign/editor/' + slug
-    $('#template_previous').attr('href',editorcampaign)
+    $('#delivery_previous').attr('href',editorcampaign)
     // $('#template_next').attr('href',editor_url)
+
+    function select(obj){
+            var list_name = obj.id
+            var csrf_token = $('input[name=csrfmiddlewaretoken]').val()
+
+                $.ajax({
+                  type: 'post',
+                  url: "/campaign/ajax/search-mailing-list/",
+                  data: {
+                    'data': {'id':list_name,'csrfmiddlewaretoken':csrf_token}  
+                  },
+                  success: function (data) {
+                    console.log(data)
+                    $('#mailing_list').html(data)
+                  }
+                });
+    };
+
 </script>
 {% endblock  %}
