--- a/templates/myapp/template.html
+++ b/templates/myapp/template.html
@@ -13,13 +13,13 @@
         <li class="stepbar-item done">
             <a class="stepbar-link" href="#" title="Step 1 : General Info">
                 <span class="step-number">{% trans '1' %}</span>
-                <span class="step-title">{% trans 'General Info' %}</span>
+                <span class="step-title">{% trans 'Campaign Info' %}</span>
             </a>
         </li>
         <li class="stepbar-item current">
             <a class="stepbar-link" href="#" title="Step 2 : Template" aria-current="step">
                 <span class="step-number">{% trans '2' %}</span>
-                <span class="step-title">{% trans 'Template' %}</span>
+                <span class="step-title">{% trans 'Design' %}</span>
             </a>
         </li>
         <li class="stepbar-item next">
@@ -42,7 +42,7 @@
         </li>
         <li class="stepbar-item next">
             <a class="stepbar-link" href="#" title="Step 6 : Aspernatur">
-                <span class="step-number">{% trans '6' %}</span>
+                <span class="step-number">{% trans '5' %}</span>
                 <span class="step-title">{% trans 'Overview' %}</span>
             </a>
         </li>
@@ -51,9 +51,9 @@
 
 <div class="row">
 
-  <div class="col-md-6"><h2 style="margin-top: 1rem">{% trans 'My Templates' %}</h2></div>
+  <div class="col-md-6"><h3 style="margin: 1rem;margin-left: 2%;margin-bottom: 0">{% trans 'My Templates' %}</h3></div>
 </div>
-<div class="row">
+<div class="row" style="margin-top: 1%">
     <div class="alert alert-primary alert-dismissible fade show" role="alert" style="display: none;">
   {{alert}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close" style="margin: 0;padding: .1rem">
@@ -64,38 +64,38 @@
 </div>
 <div class="row">
   <a href="javascript:void(0)" id="blank_template" onclick="selected(this)">
-<div class="thumbnail-container" {% if my_template.template.id is None %} style="width: 15rem;height: 9rem;border: 3px solid #f16e00" {% else %} style="width: 15rem;height: 9rem;" {% endif %}>
+<div class="thumbnail-container" id="blank_template" {% if my_template.id is None or my_template.id == 2  %} style="width: 15rem;height: 9rem;border: 3px solid #f16e00" {% else %} style="width: 15rem;height: 9rem;" {% endif %}>
   <div class="thumbnail">
-   <iframe srcdoc="<h1>BLANK</h1>" frameborder="0"></iframe>
+   <iframe srcdoc="" frameborder="0"></iframe>
   </div>
 </div>
-  <h3>{% trans 'Blank Template' %}</h3>
+  <h4 class="template_name" {% if my_template.id is None or my_template.id == 2  %} style="margin-left: 6%;color: #f16e00" {% else %} style="margin-left: 6%" {% endif %}>{% trans 'Blank Template' %}</h4>
 
 </a>
 
 </div>
 <div class="row">
 
-  <div class="col-md-6"><h2 style="margin-top: 1rem">{% trans 'Public Templates' %}</h2></div>
+  <div class="col-md-6"><h3 style="margin: 1rem;margin-left: 2%;margin-bottom: 0">{% trans 'Public Templates' %}</h3></div>
 
 </div>
 <div class="row">
     {% for template in object_list %}
-    {% if not template.id == 3 %}
+    {% if not template.id == 2 %}
   <a href="javascript:void(0)" id="{{template.id}}" onclick="selected(this)">
-  <div class="thumbnail-container" id="{{template.id}}" {% if my_template.template.id == template.id %} style="width: 15rem;height: 9rem;border: 3px solid #f16e00" {% else %} style="width: 15rem;height: 9rem;" {% endif %}>
+  <div class="thumbnail-container" id="{{template.id}}" {% if my_template.id == template.id %} style="width: 15rem;height: 9rem;border: 3px solid #f16e00" {% else %} style="width: 15rem;height: 9rem;" {% endif %}>
     <div class="thumbnail">
-     <iframe srcdoc="{{template.templatebody.body}}" frameborder="0"></iframe>
+     <iframe srcdoc="{{template.body}}" frameborder="0"></iframe>
     </div>
   </div>
-  <h3>{{template.name}}</h3>
+  <h4 class="template_name" {% if my_template.id == template.id %} style="margin-left: 6%;color: #f16e00" {% else %} style="margin-left: 6%" {% endif %}>{{template.name}}</h4>
   </a>
 {% endif %}
 {% endfor %}
 </div>
 <form method="post" action="" onsubmit="submit()">
   {% csrf_token %}
-<input type="text" name="template_id" id="template_id" {% if my_template.template.id is not None %} value="{{my_template.template.id}}" {% else %} value="blank_template" {% endif %}" style="display: none;">
+<input type="text" name="template_id" id="template_id" {% if my_template.id is not None %} value="{{my_template.id}}" {% else %} value="blank_template" {% endif %}" style="display: none;">
 
 <div class="row" style="margin-top: 2%">
           <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
@@ -151,18 +151,22 @@
     }
 function selected(obj) {
     $('.thumbnail-container').attr('style',"width: 15rem;height: 9rem;")
+    $('.template_name').attr('style',"margin-left: 6%;")
     var s = $(obj).children()[0].getAttribute('style');
     s = s+ ';border: 3px solid #f16e00'
     $(obj).children()[0].setAttribute('style',s);
+    $(obj).children()[1].setAttribute('style','color:#f16e00;margin-left: 6%');
     var id = obj.id;
     $('#template_id').attr('value',id)
   }
 
-// $("div.thumbnail-container").hover(function() {
-//   $(this).css("background-color","red")
-// });
-$(".thumbnail-container").hover(function(e) { 
+$(".thumbnail-container").hover(function(e) {
     $(this).css("border",e.type === "mouseenter"?"2px solid #f16e00":"2px solid #000") 
-})
+    val = $('#template_id').val()
+    id = $(this).attr('id')
+    if(val == id){
+      $(this).attr('style','width: 15rem;height: 9rem;border:2px solid #f16e00')
+    }
+});
 </script>
 {% endblock  %}
