--- a/static/static/css/thumbnail.css
+++ b/static/static/css/thumbnail.css
@@ -3,6 +3,31 @@
   height: 800px;
 }
 
+.thumbnail-preview iframe {
+  width: 1640px;
+  height: 1800px;
+}
+
+.thumbnail-preview {
+  position: relative;
+  -ms-zoom: 0.25;
+  -moz-transform: scale(0.25);
+  -moz-transform-origin: 0 0;
+  -o-transform: scale(0.25);
+  -o-transform-origin: 0 0;
+  -webkit-transform: scale(0.25);
+  -webkit-transform-origin: 0 0;
+}
+
+.thumbnail:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 .thumbnail {
   position: relative;
   -ms-zoom: 0.25;
