--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
       <td>{{campaign.name}}</td>
       <td>{{campaign.status}}</td>
       <td style="text-align: right">
-        <a style="text-decoration: none;" {% if campaign.draft_stage == 1 %} href="{% url 'updatecampaign' campaign.slug %}" {% elif campaign.draft_stage == 2 %} href="{% url 'template' campaign.slug %}" {% elif campaign.draft_stage == 3 %} href="{% url 'editor' campaign.slug %}" {% endif %}><i class="icon-Pencil" data-toggle="tooltip" data-placement="top" title="{% trans 'Edit' %}"></i></a>
+        <a style="text-decoration: none;" {% if campaign.draft_stage == 1 %} href="{% url 'updatecampaign' campaign.slug %}" {% elif campaign.draft_stage == 2 %} href="{% url 'template' campaign.slug %}" {% elif campaign.draft_stage == 3 %} href="{% url 'editor' campaign.slug %}" {% elif campaign.draft_stage == 6 %}  href="{% url 'overview' campaign.slug %}" {% endif %}><i class="icon-Pencil" data-toggle="tooltip" data-placement="top" title="{% trans 'Edit' %}"></i></a>
         <i class="icon-trash" data-toggle="tooltip" data-placement="top" title="{% trans 'Delete' %}"></i>
       </td>
     </tr>
