--- a/templates/myapp/delivery.html
+++ b/templates/myapp/delivery.html
@@ -49,26 +49,45 @@
     </ol>
 </nav>
 <div class="container" style="margin-top: 2%">
-<table class="table">
+<div class="row">
+    <div class="col-md-10">
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" id="myInput" onkeyup="myFunction()" class="form-control" placeholder="Search">    
+        </div>
+        <!-- <button type="submit" class="btn btn-default">Submit</button> -->  
+      </form>
+    </div>
+    <div class="col-md-2">
+        <a href="" class="btn btn-primary" style="margin-bottom: 4%;">{% trans 'Create a new list' %}</a>  
+        
+    </div>
+</div>
+<table class="table" id="myTable">
   <thead>
     <tr>
       <th scope="col">{% trans 'Name' %}</th>
-      <th scope="col">{% trans 'Type' %}</th>
-      <th scope="col">{% trans 'Creation Date' %}</th>
+      <th scope="col" style="text-align: center;">{% trans 'Type' %}</th>
+      <th scope="col" style="text-align: center;">{% trans 'Creation Date' %}</th>
       <th scope="col">{% trans 'Author' %}</th>
     </tr>
   </thead>
   <tbody>
     {% for l in object_list %}
     <tr>
-      <th scope="row"><a href="javascript:void(0)" onclick="select(this)" id="{{l.name}}">{{l.name}}</a></th>
-      <td>{{l.type_of_list}}</td>
-      <td>{{l.creation_date}}</td>
+      <td scope="row"><a href="javascript:void(0)" onclick="select(this)" id="{{l.name}}">{{l.name}}</a></td>
+      <td style="text-align: center;">{{l.type_of_list}}</td>
+      <td style="text-align: center;">{{l.creation_date}}</td>
       <td>{{l.creator.first_name}}</td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
+<!-- <div class="form"> -->
+<div id='mailing_list' class="form">
+    
+<!-- </div> -->
+</div>
 </div>
 <!-- <form method="post" action="">
     {% csrf_token %}
@@ -76,13 +95,11 @@
     <input type="date" name="date">
     <input type="time" name="time">
 </div> -->
-{% csrf_token %}
-<div id='mailing_list'></div>
-<div class="row" style="margin-top: 13%">
+<div class="row" style="margin-top: 10%">
           <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 60%;">{% trans 'Cancel' %}</a>
         <a href="" id="delivery_previous" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Previous' %}</a>
         <a href="{% url 'home' %}" class="btn btn-secondary" style="margin-left: 1%;">{% trans 'Save as draft' %}</a>
-        <button type="submit" class="btn btn-primary" style="margin-left: 1%;">{% trans 'SEND' %}</button>  
+        <a href="" id="delivery_next" class="btn btn-primary" style="margin-left: 1%;">{% trans 'Next' %}</a>  
 </div>
 <!-- </form> -->
 
@@ -92,18 +109,20 @@
     parameter = url.split("/")
     slug = parameter[parameter.length - 2]
     editorcampaign = '/campaign/editor/' + slug
+    overview_url = '/campaign/overview/' + slug
     $('#delivery_previous').attr('href',editorcampaign)
-    // $('#template_next').attr('href',editor_url)
+    $('#delivery_next').attr('href',overview_url)
 
     function select(obj){
             var list_name = obj.id
             var csrf_token = $('input[name=csrfmiddlewaretoken]').val()
 
                 $.ajax({
-                  type: 'post',
+                  // type: 'post',
                   url: "/campaign/ajax/search-mailing-list/",
                   data: {
-                    'data': {'id':list_name,'csrfmiddlewaretoken':csrf_token}  
+                    'data': {'id':list_name}  
+                    // 'data': {'id':list_name,'csrfmiddlewaretoken':csrf_token}  
                   },
                   success: function (data) {
                     console.log(data)
@@ -111,6 +130,27 @@
                   }
                 });
     };
+function myFunction() {
+  // Declare variables 
+  var input, filter, table, tr, td, i;
+  input = document.getElementById("myInput");
+  filter = input.value.toUpperCase();
+  table = document.getElementById("myTable");
+  tr = table.getElementsByTagName("tr");
 
+        console.log("fdf")
+  // Loop through all table rows, and hide those who don't match the search query
+  for (i = 1; i < tr.length; i++) {
+    td = tr[i].getElementsByTagName("td")[0];
+    if (td) {
+      if (td.textContent.toUpperCase().indexOf(filter) > -1) {
+      // if (td.innerHTML.toUpperCase().indexOf(filter) > -1) {
+        tr[i].style.display = "";
+      } else {
+        tr[i].style.display = "none";
+      }
+    } 
+  }
+}
 </script>
 {% endblock  %}
