--- a/templates/schedule/_day_cell.html
+++ b/templates/schedule/_day_cell.html
@@ -1,10 +1,10 @@
 {% load scheduletags %}
 {% load tz %}
 
-  {% if day.has_occurrences and date_today > day.start.date %}
+  {% if day.has_occurrences and day|is_my_event:request.user and date_today > day.start.date %}
     <td style="border-left: 12px solid #fff;border-bottom: 6px solid #fff;background-color: #999999;color: #ffffff" data-toggle="tooltip" data-placement="top" title="{{day|get_event_on_tooltip}}">
 
-  {% elif day.has_occurrences %}
+  {% elif day.has_occurrences and day|is_my_event:request.user %}
     <td style="border-left: 12px solid #fff;border-bottom: 6px solid #fff;background-color: #000;" data-toggle="tooltip" data-placement="top" title="{{day|get_event_on_tooltip}}">
   {% elif date_today == day.start.date %}
     <td style="border-left: 12px solid #fff;border-bottom: 6px solid #fff;background-color: #ff7900;">
@@ -14,10 +14,9 @@
     <td style="border-left: 12px solid #fff;border-bottom: 6px solid #fff;background-color: #dddddd">
   {% endif %}
   
-  {% if day.has_occurrences %}<a href="{% url "day_calendar" calendar.slug %}{% querystring_for_date day.start 3 %}">{% endif %}
+  {% if day.has_occurrences and day|is_my_event:request.user %}<a href="{% url "day_calendar" calendar.slug %}{% querystring_for_date day.start 3 %}">{% endif %}
 
-    <strong {% if day.has_occurrences %} style="color: #fff;" {% elif date_today == day.start.date %} style="color: #000" 
-    {% elif date_today > day.start.date %} style="color: #999999;" {% endif %}>{{day.start.day}}</strong>
+    <strong {% if day.has_occurrences and day|is_my_event:request.user %} style="color: #fff;" {% elif date_today == day.start.date %} style="color: #000" {% elif date_today > day.start.date %} style="color: #999999;" {% endif %}>{{day.start.day}}</strong>
     
-  {% if day.has_occurrences %}</a>{% endif %}
+  {% if day.has_occurrences and day|is_my_event:request.user %}</a>{% endif %}
 </td>
